--- a/css/astra-style.css
+++ b/css/astra-style.css
@@ -413,6 +413,14 @@ ul.topnav li a.active {
    word-spacing: 2px;
    text-transform: capitalize;
 }
+
+@media screen and (max-width: 1200px) {
+  .footer-bottom p {
+    float: none;
+  }
+}
+
+
 .footer-bottom p a{
   color: white;
   font-size: 16px;
