--- a/css/astra-style.css
+++ b/css/astra-style.css
@@ -297,7 +297,7 @@ ul.topnav li a.active {
 .astra-voyage-team {
   box-shadow: 0 4px 8px 0 rgba(255,255,255,0.2);
   transition: 0.3s;
-  width: 24rem;
+  width: 40%;
   height: 30rem;
   color: white;
   position: relative;
