--- a/css/astra-style.css
+++ b/css/astra-style.css
@@ -297,12 +297,13 @@ ul.topnav li a.active {
 .astra-voyage-team {
   box-shadow: 0 4px 8px 0 rgba(255,255,255,0.2);
   transition: 0.3s;
-  width: 40%;
+  width: 75%;
   height: 30rem;
   color: white;
   position: relative;
   margin: auto;
   border-radius: 16px;
+  margin-bottom: 8rem;
   text-align: center;
   background-color: rgb(84, 38, 121, 1);
 }
