--- a/css/astra-style.css
+++ b/css/astra-style.css
@@ -265,6 +265,7 @@ ul.topnav li a.active {
   margin: auto;
   border-radius: 16px;
   text-align: center;
+  margin-bottom: 8rem;
   background-color: rgb(84, 38, 121, 1);
 }
 
