--- a/css/astra-style.css
+++ b/css/astra-style.css
@@ -262,7 +262,7 @@ ul.topnav li a.active {
 .astra-voyage-validator {
   box-shadow: 0 6px 10px 0 rgba(255,255,255,0.2);
   transition: 0.3s;
-  width: 18rem;
+  width: 22rem;
   height: 14rem;
   color: white;
   position: relative;
@@ -271,6 +271,7 @@ ul.topnav li a.active {
   text-align: center;
   margin-bottom: 8rem;
   background-color: rgb(84, 38, 121, 1);
+  padding-top: 1rem;
 }
 
 .astra-voyage-validator:hover {
