--- a/css/astra-style.css
+++ b/css/astra-style.css
@@ -262,7 +262,7 @@ ul.topnav li a.active {
 .astra-voyage-validator {
   box-shadow: 0 6px 10px 0 rgba(255,255,255,0.2);
   transition: 0.3s;
-  width: 20rem;
+  width: 22vw;
   height: 14rem;
   color: white;
   position: relative;
